<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        tools:context="com.project.movies.popular.popularmovies.MovieDetailActivity">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/icons"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Test title" />

            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/iv_content_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                tools:layout_height="150dp"
                tools:layout_width="150dp"/>

            <TextView
                android:id="@+id/tv_detail_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/average_rating"
                android:contentDescription="@string/average_rating"
                app:layout_constraintHorizontal_bias="0.151"
                app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_detail_poster" />

            <TextView
                android:id="@+id/tv_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10.0"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_rating_label"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_detail_rating_label" />

            <TextView
                android:id="@+id/tv_detail_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:contentDescription="@string/release_date"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_detail_rating"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_rating" />

            <TextView
                android:id="@+id/tv_detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="29-01-2017"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_detail_release_date_label"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="markFavourite"
                android:text="@string/favourite_button"
                app:layout_constraintLeft_toLeftOf="@+id/tv_detail_release_date"
                android:id="@+id/button_favourite"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingTop="5dp"
                android:text="@string/synopsis"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="@+id/iv_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_poster" />

            <TextView
                android:id="@+id/tv_detail_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="5dp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="@+id/textView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="@string/synopsis" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_detail_synopsis"
                app:layout_constraintRight_toRightOf="@+id/tv_detail_synopsis"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_synopsis" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/rv_trailers_list"
                app:layout_constraintRight_toRightOf="@+id/rv_trailers_list"
                app:layout_constraintTop_toBottomOf="@+id/rv_trailers_list" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_loading_detail"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_error_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textSize="30sp"
        android:visibility="invisible" />

</FrameLayout>


